@@ -424,7 +424,7 @@ pkgfilter_PROGRAMS += \
 	foomatic-rip \
 	gstoraster \
 	pdftoijs \
-	pdftoippprinter \
+	sys5ippprinter \
 	pdftops \
 	pdftoraster \
 	rastertoescpx \
@@ -600,14 +600,14 @@ pdftoijs_LDADD = \
 	$(IJS_LIBS) \
 	$(POPPLER_LIBS)
 
-pdftoippprinter_SOURCES = \
+sys5ippprinter_SOURCES = \
 	filter/common.c \
 	filter/common.h \
-	filter/pdftoippprinter.c
-EXTRA_pdftoippprinter_SOURCES = filter/strcasestr.c
-pdftoippprinter_CFLAGS = $(CUPS_CFLAGS)
-pdftoippprinter_LDADD = $(STRCASESTR) $(CUPS_LIBS)
-pdftoippprinter_DEPENDENCIES = $(STRCASESTR)
+	filter/sys5ippprinter.c
+EXTRA_sys5ippprinter_SOURCES = filter/strcasestr.c
+sys5ippprinter_CFLAGS = $(CUPS_CFLAGS)
+sys5ippprinter_LDADD = $(STRCASESTR) $(CUPS_LIBS)
+sys5ippprinter_DEPENDENCIES = $(STRCASESTR)
 
 pdftops_SOURCES = \
 	filter/common.c \
