@@ -3,6 +3,9 @@ NEWS - OpenPrinting CUPS Filters v1.0.68 - 2015-04-13
 
 CHANGES IN V1.0.69
 
+	- sys5ippprinter: Renamed pdftoippprinter to reflect that it is
+	  once a System 5 interface script and second does not accept only
+	  PDF as input.
 	- pdftoippprinter: Support also PWG Raster as input format so that
 	  an auto-generated, PPD-less queue for an IPP printer emulates an
 	  IPP Everywhere printer.
